--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,16 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+    {
+      "source": "/(manifest.json|favicon.ico|logo192.png|logo512.png|robots.txt|asset-manifest.json)",
+      "destination": "/$1"
+    },
+    {
+      "source": "/static/(.*)",
+      "destination": "/static/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
   ]
 }
