--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "estshartk",
-  "homepage": "https://AhmedReda22.github.io/estshartk-Ihsan",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
