--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
-    "axios": "^1.10.0",
+    "axios": "^1.11.0",
     "bootstrap": "^5.3.6",
     "bootstrap-icons": "^1.13.1",
-    "framer-motion": "^12.23.3",
+    "framer-motion": "^12.23.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.1.0",
     "sweetalert2": "^11.22.0",
     "web-vitals": "^2.1.4"
